--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: About Me
-description: This is what I do.
+title: About
+description: project details
 background: '/img/bg-about.jpg'
 ---
 
