--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Contact Me
-description: Have questions? I have answers.
+title: Contact
+description: Welcome, contributes!
 background: '/img/bg-contact.jpg'
 form: true
 ---
