--- a/contact.html
+++ b/contact.html
@@ -5,33 +5,38 @@ description: Welcome, contributes!
 background: '/img/bg-contact.jpg'
 form: true
 ---
+<h3> Team </h3>
+  <ol><b>서병준 Seo Byeong Jun</b> - 17 / Smart Device Engineering, IME, Sejong Univ. </ol>
+  <ol><b>최세은 Choi Se Eun</b> - 18 / Data Science, Sejong Univ. </ol>
+  <ol><b>정민지 Jeong Min Ji</b> - 18 / Data Science, Sejong Univ. </ol>
 
-<p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+<p>문의나 협업을 요청하시려면 아래의 양식을 작성해주세요. 최대한 빨리 답변해드리겠습니다.</p>
+<p>Any questions or contributes are ok. Whenever you have, fill out the form below to send us a message and we will get back to you as soon as possible!</p>
 <form name="sentMessage" id="contactForm" novalidate>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
-      <label>Name</label>
+      <label>이름 Name</label>
       <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
       <p class="help-block text-danger"></p>
     </div>
   </div>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
-      <label>Email Address</label>
+      <label>이메일 Email</label>
       <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
       <p class="help-block text-danger"></p>
     </div>
   </div>
   <div class="control-group">
     <div class="form-group col-xs-12 floating-label-form-group controls">
-      <label>Phone Number</label>
+      <label>전화번호 Phone</label>
       <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
       <p class="help-block text-danger"></p>
     </div>
   </div>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
-      <label>Message</label>
+      <label>내용 Message</label>
       <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
       <p class="help-block text-danger"></p>
     </div>
