feat : Complete 1.0.0 Update

--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,20 @@ description: Welcome, contributes!
 background: '/img/bg-contact.jpg'
 form: true
 ---
-<h3> Team </h3>
-  <ol><b>서병준 Seo Byeong Jun</b> - 17 / Smart Device Engineering, IME, Sejong Univ. </ol>
-  <ol><b>최세은 Choi Se Eun</b> - 18 / Data Science, Sejong Univ. </ol>
-  <ol><b>정민지 Jeong Min Ji</b> - 18 / Data Science, Sejong Univ. </ol>
+<p style="margin-top: 30px;">
+  <ol style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:medium; color:gray">
+    <a href="https://github.com/sbj6364"><b>서병준 Seo Byeong Jun</b></a> / Smart Device Engineering, IME 17, Sejong Univ.
+  </ol>
+  <ol style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:medium; color:gray">
+    <a href="https://github.com/ChoiSeEun"><b>최세은 Choi Se Eun</b></a> / Data Science 18, Sejong Univ.
+  </ol>
+  <ol style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:medium; color:gray">
+    <a href="https://github.com/minjimango"><b>정민지 Jeong Min Ji</b></a> / Data Science 18, Sejong Univ.
+  </ol>
+</p>
 
-<p>문의나 협업을 요청하시려면 아래의 양식을 작성해주세요. 최대한 빨리 답변해드리겠습니다.</p>
-<p>Any questions or contributes are ok. Whenever you have, fill out the form below to send us a message and we will get back to you as soon as possible!</p>
+<p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:large;padding-top: 30px;">본 오픈소스 프로젝트와 관련하여 문의나 협업을 요청하시려면 아래의 양식을 작성해주시기 바랍니다. 확인하는 대로 최대한 빨리 답변해드리겠습니다.</p>
+<p style="font-size:large;">Any questions or contributes are ok. Whenever you have, fill out the form below to send us a message and we will get back to you as soon as possible!</p>
 <form name="sentMessage" id="contactForm" novalidate>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
