--- a/features.html
+++ b/features.html
@@ -2,33 +2,43 @@
 layout: page
 title: Features
 description: project details
-background: '/img/bg-about.jpg'
+background: '/img/bg-features.jpeg'
 ---
 
 
-<h3>1. 고유 명사를 고려한 토큰화</h3>
-    <ol>기존의 라이브러리가 인식하지 못하는 고유 명사를 쉽게 지정하여 토큰화 결과에 반영할 수 있도록 합니다.</ol>
-    <ol>여러 개의 고유 명사가 존재하는 경우 명사별로 점수를 지정하여 우선순위를 결정할 수 있습니다.</ol>
+<p style="text-align:center;">
+    <a href="https://korean-nlp-visual.readthedocs.io/en/latest/%EC%82%AC%EC%9A%A9%EB%B2%95.html" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;font-size:larger; color:gray;">사용법</a>
+</p>
 
-<h3>2. 중복 명사 제거</h3>
-    <ol>사용자의 필요에 따라 중복되는 명사를 제거하여 결과를 보여줍니다.</ol>  
+<h5 style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;font-weight: 600;padding-top: 40px;">1. 고유 명사를 고려한 토큰화</h5>
+    <li style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size:medium; padding-top: 5px;text-indent: -22px; margin-left: 30px;", type="*">기존의 라이브러리가 인식하지 못하는 고유 명사를 쉽게 지정하여 토큰화 결과에 반영할 수 있도록 합니다.</li>
+    <li style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size:medium; padding-top: 5px;text-indent: -22px; margin-left: 30px;", type="*">여러 개의 고유 명사가 존재하는 경우 명사별로 점수를 지정하여 우선순위를 결정할 수 있습니다.</li>
 
-<h3>3. 명사 개수 카운팅</h3>
-    <ol>특정 명사의 빈도수를 빠르게 확인할 수 있습니다.</ol>
+<h5 style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;font-weight: 600;padding-top: 40px;">2. 중복 명사 제거</h5>
+    <li style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size:medium; padding-top: 5px;text-indent: -22px; margin-left: 30px;", type="*">사용자의 필요에 따라 중복되는 명사를 제거하여 결과를 보여줍니다.</li> 
 
-<h3>4. [진행중] 시각화</h3>
-    <ol>토큰화 된 결과를 빈도수 등에 따라 워드클라우드,막대그래프로 나타내어 텍스트의 탐색을 도와줍니다.</ol>
+<h5 style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;font-weight: 600;padding-top: 40px;">3. 명사 개수 카운팅</h5>
+    <li style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size:medium; padding-top: 5px;text-indent: -22px; margin-left: 30px;", type="*">특정 명사의 빈도수를 빠르게 확인할 수 있습니다.</li>
+
+<h5 style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;font-weight: 600;padding-top: 40px;">4. [진행중] 시각화</h5>
+    <li style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size:medium; padding-top: 5px;text-indent: -22px; margin-left: 30px;", type="*">토큰화 된 결과를 빈도수 등에 따라 워드클라우드,막대그래프로 나타내어 텍스트의 탐색을 도와줍니다.</li>
 
 
-<h3>1. Tokenization considering proper nouns</h3>
-    <ol>It makes it easy to designate proper nouns that existing libraries do not recognize so that they can be reflected in tokenization results.</ol>
-    <ol>If there are multiple proper nouns, you can prioritize by scoring for each noun.</ol>
+<p style="text-align:center;margin-top: 100px;">
+    <a href="https://korean-nlp-visual.readthedocs.io/en/latest/How%20to%20Use.html" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;font-size:larger; color: gray;">How to Use</a>
+</p>
 
-<h3>2. Removing duplicate nouns</h3>
-    <ol>It shows the results by removing duplicate nouns according to the user’s needs.</ol>  
+<h5 style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;font-weight: 600;padding-top: 40px;">1. Tokenization considering proper nouns</h5>
+    <li style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size:medium; padding-top: 5px;text-indent: -22px; margin-left: 30px;", type="*">It makes it easy to designate proper nouns that existing libraries do not recognize so that they can be reflected in tokenization results.</li>
+    <li style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size:medium; padding-top: 5px;text-indent: -22px; margin-left: 30px;", type="*">If there are multiple proper nouns, you can prioritize by scoring for each noun.</li>
 
-<h3>3. Counting the number of nouns</h3>
-    <ol>You can quickly check the frequency of certain nouns.</ol>
+<h5 style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;font-weight: 600;padding-top: 40px;">2. Removing duplicate nouns</h5>
+    <li style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size:medium; padding-top: 5px;text-indent: -22px; margin-left: 30px;", type="*">It shows the results by removing duplicate nouns according to the user’s needs.</li>  
 
-<h3>4. [In progress] Visualizing</h3>
-    <ol>The tokenized results are displayed in word clouds and bar graphs according to the frequency to help analyze the text.</ol>
+<h5 style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;font-weight: 600;padding-top: 40px;">3. Counting the number of nouns</h5>
+    <li style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size:medium; padding-top: 5px;text-indent: -22px; margin-left: 30px;", type="*">You can quickly check the frequency of certain nouns.</li>
+
+<h5 style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;font-weight: 600;padding-top: 40px;">4. [In progress] Visualizing</h5>
+    <li style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size:medium; padding-top: 5px;text-indent: -22px; margin-left: 30px;", type="*">The tokenized results are displayed in word clouds and bar graphs according to the frequency to help analyze the text.</li>
+
+
