--- a/index.html
+++ b/index.html
@@ -3,3 +3,12 @@ layout: home
 background: '/img/bg-index.jpg'
 ---
 
+<p style="text-align:center;width: 50%;float:left;padding-left: 15%;padding-bottom: 40px;">
+    <a href="https://korean-nlp-visual.readthedocs.io/en/latest/index.html" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;font-size:larger; color:gray;">Documentation</a>
+</p>
+<p style="text-align:center;width: 50%; float:right;padding-right: 15%;padding-bottom: 40px;">
+    <a href="https://github.com/sbj6364/Korean-NLP-Visual" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;font-size:larger; color: gray;">GitHub</a>
+</p>
+<p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:large;padding-top: 30px;">Korean-NLP-Visual은 오픈소스 프로젝트입니다. 분석이 필요한 텍스트 데이터를 손쉽게 파악할 수 있도록 도와줍니다. 일반적으로 사용되는 라이브러리의 장점만을 모아 토큰화 성능을 개선하고, 토큰화 된 단어로 막대 그래프, 워드 클라우드 등을 그려 텍스트의 탐색을 가능하게 합니다.</p>
+<p style="font-size:large;padding-bottom: 100px;">The Korean-NLP-Visual is an open source project. It helps to easily identify text data that needs analysis. It collects only the advantages of commonly used libraries to improve tokenization performance, and draws bar graphs and word clouds with tokenized words to enable text exploration.</p>
+
